k8s/users-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: users-service
spec:
  selector:
    app: users-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
