k8s/users-service/base/users-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-db
  namespace: users-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-db
  template:
    metadata:
      labels:
        app: users-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: users-db-storage
              mountPath: /var/lib/postgresql/data
            - name: users-db-init
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: users-db-storage
          persistentVolumeClaim:
            claimName: users-db-pvc
        - name: users-db-init
          configMap:
            name: users-db-init
---
apiVersion: v1
kind: Service
metadata:
  name: users-db-service
  namespace: users-service
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: users-db
